# realsense_lebai

./: README.md
realsense_roi_points/: README.md
realsense_roi_points/src/robot_cap/: CMakeLists.txt  main.cpp  sub.cpp
realsense_roi_points/src/robot_cap/data/: B2C.txt  G2F.txt  G2F.xml  ToolData.txt  UserData.txt
realsense_roi_points/src/robot_cap/trt-src/: calibrator.h  cuda_utils.h  preprocess.h  sgbm.cpp  yolov5.cpp  yolov5.h
robot_leibai_plus/: README.md
robot_leibai_plus/src/robot_cap/: CMakeLists.txt  main.cpp  model_transform.cpp  obb.cpp  package.xml  sub.cpp
robot_leibai_plus/src/robot_cap/data/: B2C.xml  B2R.xml  C2F.txt  C2F5.xml  G2F_Ideal.xml
robot_leibai_plus/src/robot_cap/launch/: start.launch
robot_leibai_plus/src/robot_cap/param/: config.txt
robot_leibai_plus/src/robot_cap/trt-plugin/: yololayer.cu  yololayer.h
robot_leibai_plus/src/robot_cap/trt-src/: common.hpp  logging.h  macros.h  sgbm.h  utils.h  yolov5.cpp  yolov5.h
rs_lebai_hand-eye_calibration/: CMakeLists.txt  README.md
rs_lebai_hand-eye_calibration/data/: B2R.txt  C2F.xml  角点世界坐标.xml
rs_lebai_hand-eye_calibration/include/: Camera.h  CameraCalibration.h  CoordinatesTransform.h  getB2C.h  getC2F.h
rs_lebai_hand-eye_calibration/src/: Camera.cpp  CameraCalibration.cpp  CoordinatesTransform.cpp  getB2C.cpp  getC2F.cpp  main.cpp  main（BAK）.cpp
